--- a/index.html
+++ b/index.html
@@ -25,10 +25,6 @@
                 <p class="under-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae architecto nobis ullam.</p>
                 <button class="btn1">Sign Up</button>
         </div>
-    
-        <div class="image">
-            <p></p>
-        </div>
         </div>
     <div class="content">
         <h2>Some Random Pics</h2>
@@ -56,13 +52,13 @@
         </div>
     </div>
     <div class="quote">
-        <p>Tell them the north remembers.</p>
+        <p class="in-quote">"Tell them the north remembers."</p>
         <p class="author">- Arya Stark</p>
     </div>
     <div class="sign-up-section">
         <div class="text">
             <p><strong>Call to action! It's time!</strong></p>
-        <p>Sign up for our product by clicking that button right over there!</p>
+            <p class="sign-p">Sign up for our product by clicking that button right over there!</p>
         </div>
         <button class="btn2">Sign Up</button>
     </div>
