--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
     </div>
     <div class="sign-up-section">
         <div class="text">
-            <p><strong>Call to action! It's time!</strong></p>
+            <p class="action"><strong>Call to action! It's time!</strong></p>
             <p class="sign-p">Sign up for our product by clicking that button right over there!</p>
+            <button class="btn2">Sign Up</button>
         </div>
-        <button class="btn2">Sign Up</button>
     </div>
 </div>
     <footer>ra.exe© Simple Project</footer>
