--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <p class="logo">LOGO</p>
         </div>
         <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Store</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="https://gameofthrones.fandom.com/wiki/Arya_Stark" target="_blank">About</a></li>
+            <li><a href="#">Search</a></li>
+            <li><a href="#">Logout</a></li>
         </ul>
     </header>
     <div class="main">
@@ -58,11 +58,11 @@
     <div class="sign-up-section">
         <div class="text">
             <p class="action"><strong>Call to action! It's time!</strong></p>
-            <p class="sign-p">Sign up for our product by clicking that button right over there!</p>
+            <p class="sign-p">Sign up by clicking that button right over there!</p>
             <button class="btn2">Sign Up</button>
         </div>
     </div>
 </div>
-    <footer>ra.exe© Simple Project</footer>
+    <footer><a href="https://github.com/NyctoRAA" target="_blank">ra.exe© Simple Project</a></footer>
 </body>
 </html>
